--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<!-- ICS2O-Unit-5-07-HTML-MDL -->
+<html lang="en-ca">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Division, in JS" />
+  <meta name="keywords" content="mths, icd2o" />
+  <meta name="author" content="Isaac Ip" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-indigo.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+  <link rel="manifest" href="./site.webmanifest" />
+  <title>Division, in JS</title>
+</head>
+
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Division, in JS</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <div class="right-image">
+        <img src="./images/division.png" alt="Division">
+        <h1>&nbsp Please enter value below :<h1>
+      </div>
+      <!-- Numeric textfield for number-->
+      <form action="#">
+        <div class="mdl-textfield mdl-js-tefield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="number" id="value-1">
+          <label class="mdl-textfield__label" for="value-1">Value 1</label>
+          <span class="mdl-textfield__error">Input is not a number!</span>
+        </div>
+        <br>
+        <div class="mdl-textfield mdl-js-tefield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="number" id="value-2">
+          <label class="mdl-textfield__label" for="value-2">Value 2</label>
+          <span class="mdl-textfield__error">Input is not a number!</span>
+        <!-- Raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="calculate()" type="button">
+          Calculate
+        </button>
+      </form>
+      <br>
+      <br>
+      <div id="result">
+      </div>
+    </main>
+  </div>
+</body>
+
 </html>
