--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- ICS2O-Unit-5-07-HTML-MDL -->
+<!-- ICS2O-Unit-5-08-HTML-MDL -->
 <html lang="en-ca">
 
 <head>
@@ -44,6 +44,7 @@
           <input class="mdl-textfield__input" type="number" id="value-2">
           <label class="mdl-textfield__label" for="value-2">Value 2</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
+        </div>
         <!-- Raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="calculate()" type="button">
